<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_primary"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_primary_view" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="@string/menu_social">

        <menu>

            <item
                android:id="@+id/nav_feedback"
                android:title="@string/menu_feedback" />

            <item
                android:id="@+id/nav_about"
                android:title="@string/menu_about"/>

        </menu>

    </item>

</menu>