<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_primary">

    <fragment
        android:id="@+id/nav_primary"
        android:name="com.blackholecode.saudedigital.content.view.ContentFragment"
        android:label="@string/menu_primary_view"
        tools:layout="@layout/fragment_content" >
        <action
            android:id="@+id/action_nav_primary_to_nav_search"
            app:destination="@id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.blackholecode.saudedigital.profile.view.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_edit_information"
            app:destination="@id/nav_edit_information" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_information"
        android:name="com.blackholecode.saudedigital.common.util.information.view.InformationFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.blackholecode.saudedigital.feedback.view.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.blackholecode.saudedigital.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.blackholecode.saudedigital.search.view.SearchFragment"
        android:label="@string/search_videos"
        tools:layout="@layout/fragment_search" />

</navigation>