<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/about_img_logo"
                style="@style/Theme.SaudeDigital.ImageViewCircular"
                android:src="@mipmap/ic_launcher_round"
                app:shapeAppearanceOverlay="@style/ImageCircular"/>

            <TextView
                android:id="@+id/about_txt_version"
                style="@style/Theme.SaudeDigital.TextViewBase"
                android:text="@string/about_version" />

            <TextView
                android:id="@+id/about_txt_developer"
                style="@style/Theme.SaudeDigital.TextViewBase"
                android:text="@string/about_developer" />

            <TextView
                android:id="@+id/about_txt_objective"
                style="@style/Theme.SaudeDigital.TextViewBase"
                android:text="@string/about_objective" />

            <TextView
                android:id="@+id/about_txt_nutri"
                style="@style/Theme.SaudeDigital.TextViewBase"
                android:text="@string/about_nutri" />

            <TextView
                android:id="@+id/about_txt_fisio"
                style="@style/Theme.SaudeDigital.TextViewBase"
                android:text="@string/about_fisio" />

            <TextView
                android:id="@+id/about_txt_linkedin"
                style="@style/Theme.SaudeDigital.TextViewLink"
                android:autoLink="web"
                android:text="@string/linkedin" />

            <TextView
                android:id="@+id/about_txt_git"
                style="@style/Theme.SaudeDigital.TextViewLink"
                android:autoLink="web"
                android:text="@string/github" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>