<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_items">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_img_user"
        style="@style/Theme.SaudeDigital.ImageViewCircular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_items_vertical"
        android:background="@color/border_gray"
        android:src="@drawable/ic_top_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ImageCircular" />

    <TextView
        android:id="@+id/profile_txt_name"
        style="@style/Theme.SaudeDigital.TextViewBase"
        android:layout_below="@id/profile_img_user"
        android:text="@string/profile_name" />

    <TextView
        android:id="@+id/profile_txt_age"
        style="@style/Theme.SaudeDigital.TextViewBase"
        android:layout_below="@id/profile_txt_name"
        android:text="@string/profile_age" />

    <TextView
        android:id="@+id/profile_txt_sex"
        style="@style/Theme.SaudeDigital.TextViewBase"
        android:layout_below="@id/profile_txt_age"
        android:text="@string/profile_sex" />

    <TextView
        android:id="@+id/profile_txt_condition"
        style="@style/Theme.SaudeDigital.TextViewBase"
        android:layout_below="@id/profile_txt_sex"
        android:text="@string/profile_condition" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_floating_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:backgroundTint="?colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_items_vertical"
        android:contentDescription="@null"
        android:src="@drawable/ic_edit" />

    <ProgressBar
        android:id="@+id/profile_progress"
        style="@style/Theme.SaudeDigital.ProgressBarBase"
        android:layout_centerInParent="true"
        tools:visibility="visible"/>

</RelativeLayout>