<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryContainer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Theme.SaudeDigital.TextViewTitleBase.Views"
                android:text="@string/register" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_email_input"
                style="@style/Theme.SaudeDigital.TextInputEditTextForm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_email"
                    style="@style/Theme.SaudeDigital.EditTextInputForm"
                    android:autofillHints="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_password_input"
                style="@style/Theme.SaudeDigital.TextInputEditTextForm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_password"
                    style="@style/Theme.SaudeDigital.EditTextInputForm"
                    android:autofillHints="@null"
                    android:hint="@string/password"
                    android:inputType="textWebPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_confirm_password_input"
                style="@style/Theme.SaudeDigital.TextInputEditTextForm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_confirm_password"
                    style="@style/Theme.SaudeDigital.EditTextInputForm"
                    android:autofillHints="@null"
                    android:hint="@string/confir_password"
                    android:inputType="textWebPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_btn_next"
                style="@style/Theme.SaudeDigital.Button"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryContainer"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="top"
            android:background="@color/text_gray" />

        <TextView
            android:id="@+id/register_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_items"
            android:text="@string/into_login"
            android:textAlignment="center" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/register_progress"
        style="@style/Theme.SaudeDigital.ProgressBarBase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>