<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".login.view.LoginActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_items_vertical"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="45sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_email_input"
                style="@style/Theme.SaudeDigital.TextInputEditTextForm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_email"
                    style="@style/Theme.SaudeDigital.EditTextInputForm"
                    android:autofillHints="@null"
                    android:hint="@string/email"
                    android:maxLength="50"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_password_input"
                style="@style/Theme.SaudeDigital.TextInputEditTextForm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_password"
                    style="@style/Theme.SaudeDigital.EditTextInputForm"
                    android:autofillHints="@null"
                    android:hint="@string/password"
                    android:maxLength="50"
                    android:inputType="textWebPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login_btn_enter"
                style="@style/Theme.SaudeDigital.Button"
                android:text="@string/enter" />

            <FrameLayout
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_items_horizontal"
                android:layout_marginEnd="@dimen/margin_items_horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/text_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?colorOnPrimary"
                    android:padding="2dp"
                    android:text="@string/OU"
                    android:textAllCaps="true"
                    android:textColor="@color/text_gray" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress_enter"
        style="@style/Theme.SaudeDigital.ProgressBarBase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="top"
            android:background="@color/text_gray" />

        <TextView
            android:id="@+id/login_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_items"
            android:text="@string/into_register"
            android:textAlignment="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>