<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo_img_profile"
            style="@style/Theme.SaudeDigital.ImageViewCircular"
            android:background="@color/border_gray"
            android:src="@drawable/ic_top_person"
            app:shapeAppearance="@style/ImageCircular" />

        <TextView
            android:id="@+id/photo_txt_welcome"
            style="@style/Theme.SaudeDigital.TextViewBase"
            android:text="@string/welcome_saude_digital"
            android:textAlignment="center"
            android:textColor="@color/text_gray" />

        <Button
            android:id="@+id/photo_btn_add"
            style="@style/Theme.SaudeDigital.Button"
            android:enabled="true"
            android:text="@string/add_photo" />

        <Button
            android:id="@+id/photo_btn_jump"
            style="@style/Theme.SaudeDigital.Link"
            android:enabled="true"
            android:text="@string/jump" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/photo_progress"
        style="@style/Theme.SaudeDigital.ProgressBarBase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>